--- a/src/App.module.css
+++ b/src/App.module.css
@@ -24,6 +24,34 @@ body {
   background-repeat: repeat;
 }
 
+.linksList {
+  display: flex;
+  justify-content: space-around;
+
+  font-size: 30px;
+  font-weight: 700;
+
+  margin-top: 30px;
+  margin-bottom: 30px;
+
+  color: white;
+  list-style: none;
+  background-color: white;
+}
+
+.logOutBottom {
+  font-size: 20px;
+  /* text-align: right;  */
+  /* display: block; */
+  margin-bottom: 20px;
+  float: left;
+}
+
+.navStyle {
+  margin-bottom: 20px;
+  border: 2px soled red;
+}
+
 .container {
   width: 500px;
   height: auto;
@@ -33,7 +61,7 @@ body {
   /* margin-left: 170px; */
 
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 20px;
 
   border: 1px solid white;
   border-radius: 10px;
