--- a/src/App.module.css
+++ b/src/App.module.css
@@ -19,7 +19,6 @@ body {
   background-color: rgb(58, 20, 2);
   /* background-image: url("./image/phoneBookBackgr.jpg"); */
   background-image: url("./image/woodTable.jpg");
-  /* background-size: cover; */
   background-repeat: no-repeat;
   background-repeat: repeat;
 }
@@ -36,20 +35,14 @@ body {
 
   color: white;
   list-style: none;
-  background-color: white;
+}
+.linkItem {
+  color: white;
+  text-decoration: none;
 }
 
-.logOutBottom {
-  font-size: 20px;
-  /* text-align: right;  */
-  /* display: block; */
-  margin-bottom: 20px;
-  float: left;
-}
-
-.navStyle {
-  margin-bottom: 20px;
-  border: 2px soled red;
+.linkItem:hover {
+  text-decoration: underline overline white;
 }
 
 .container {
@@ -57,9 +50,6 @@ body {
   height: auto;
 
   padding: 20px;
-
-  /* margin-left: 170px; */
-
   margin: 0 auto;
   margin-top: 20px;
 
