--- a/src/pages/UserMenu/userMenu.module.css
+++ b/src/pages/UserMenu/userMenu.module.css
@@ -2,6 +2,17 @@
   display: flex;
 }
 
-.greeting {
-  color: red;
+.logOutBtm {
+  font-size: 20px;
+  font-style: normal;
+  margin-left: 20px;
+
+  background-color: lightgrey;
+
+  border-radius: 5px;
+}
+
+.logOutBtm:hover {
+  background-color: white;
+  font-style: italic;
 }
